# libml

./: .gitignore  CMakeLists.txt  README.md
include/: libml.h  meta.h  pproc.h  random.h  tensor.h  testhdr.h  types.h  utils.h
src/: testlib.cpp
test/: test.cpp
